<resources>
    <string name="app_name">Lifting Buddy</string>

    <string name="measurement_units">Units</string>
    <string name="action_settings">Settings</string>
    <string name="gender">Gender</string>
    <string name="height_string">Height (ft/in)</string>
    <string name="age">Age (years)</string>
    <string name="weight_string">Weight (lbs)</string>
    <string name="activity_level">Activity Level</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="goal">I am trying to...</string>
    <string name="title_activity_set_goals">Set Your Goals</string>
    <string name="title_activity_customize_macros">Customize Your Macros</string>
    <string name="carb_notification">Carbohydrates will be automatically calculated based on the remaining calories</string>
    <string name="title_activity_final_calories_and_macros">Final Results</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_set_personal_info">Personal Information</string>
    <string name="title_activity_journal">Journal</string>
    <string name="end_disclaimer">Please use this calculator as a rough estimate. Every person is different
        and may need more or less calories. It is recommended that you use these numbers as a starting point
        for a few weeks and then add/remove calories as necessary.</string>

    <string name="hello_world">Hello world!</string>
    <string name="thirtyfive_g">0.35g per pound</string>
    <string name="fourty_g">0.40g per pound</string>
    <string name="fourtyfive_g">0.45g per pound</string>
    <string name="custom_g">Custom</string>
    <string name="pnine_g">0.9g per pound</string>
    <string name="peight_g">0.8g per pound</string>
    <string name="pseven_g">0.7g per pound</string>
    <string name="g_p_lb">g/lb</string>
    <string name="final_results">Final Results</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain">Maintain</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="custom_calories">Custom Calories</string>
    <string name="submit_button">Submit</string>
    <string name="calories_are">Your Calories are...</string>
    <string name="next_button">Next</string>
    <string name="daily_summary">Daily Summary</string>
    <string name="end_calories">Calories:</string>
    <string name="end_protein">Protein:</string>
    <string name="end_fat">Fat:</string>
    <string name="end_carb">Carbohydrates:</string>
    <string name="go_to_calculator">Go To Calculator</string>
</resources>
